--- a/NewsEngine2.0/Content/bootstrap-theme.css
+++ b/NewsEngine2.0/Content/bootstrap-theme.css
@@ -145,6 +145,10 @@ fieldset[disabled] .btn-primary.active {
   background-color: #265a88;
   background-image: none;
 }
+.mygreen {
+    background-color: #488B49;
+    background-image: none;
+}
 .btn-success {
   background-image: -webkit-linear-gradient(top, #5cb85c 0%, #419641 100%);
   background-image:      -o-linear-gradient(top, #5cb85c 0%, #419641 100%);
