--- a/NewsEngine2.0/Views/News/Index.cshtml
+++ b/NewsEngine2.0/Views/News/Index.cshtml
@@ -10,14 +10,14 @@
 <br />
 <br />
 <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" background-color =" #488B49">
         <div class="panel panel-info">
-            <div class="panel-body">
+            <div class="panel-heading">
                 <p>
                     @using (Html.BeginForm("Index", "News", FormMethod.Get))
                     {
-                        <b>Search article:</b>
-                        @Html.TextBox("search") <input type="submit" value="Search" />
+                        <font color ="#3e8f3e"> Search article:</font>
+                        @Html.TextBox("search") <input class="btn btn-success" type="submit" value="Search" />
                     }
                 </p>
                 <a class="btn btn-success" href="/News/Index">Toate stirile</a>
